--- a/codepage_gen.html
+++ b/codepage_gen.html
@@ -7,30 +7,39 @@
   <body>
 
     <script type="text/javascript">
-      symbols = ["☀☁☂☃★☆☺☻♩♪♫♬♭♮♯♡",
-        "←↑→↓↔↕↖↗↘↙⇦⇧⇨⇩↺↻",
+      symbols = ["⏮⏪⏴⏺⏹⏸⏵⏩⏭♩♪♫♬♭♮♯",
+        "←↑→↓↔↕↖↗↘↙↺↻★☆☺☻",
         "αβγδεθλμξπρστφψω",
-        "ΓΔΘΛΠΣΦΨΩ∇√∞∘∫  "];
+        "ΓΔΘΛΠΣΦΨΩ∇√∞∘∫♡♥ "];
         // "αβγδεθλμξπρστφψω"
         // "ΓΔΘΛΠΣΦΨΩ"
         // "∇√∞∘∫"
         // "⏮⏪⏴⏺⏹⏸⏵⏩⏭"
         // "📷📹📽🕨🕪🖮"
+        // "☀☁☂☃⇦⇧⇨⇩"
 
-      cellSize = 64 | 0;
-      texSize = 1024 | 0;
-      tileCount = (texSize / cellSize) | 0
+
+      downCount = 1;
+      cellSize = 128 | 0;
+      texSize = 2048 | 0;
+      tileCount = (texSize / cellSize) | 0;
+      bufferF = new Float32Array(texSize * texSize);
+      widthF = texSize;
+      heightF = texSize;
+      var myImageData;
+      var newImg;
       function createTextCanvas(color, font) {
         var canvas = document.createElement('canvas');
+        // var canvasSmall = document.createElement('canvasSmall');
         var ctx = canvas.getContext('2d');
+        // var ctxSmall = canvasSmall.getContext('2d');
         var fontStrA = 'bold ' + ((cellSize * 0.9218) + 'px ') + (font || 'Helvetica');
         var fontStrB = 'bold ' + ((cellSize * 0.78125) + 'px ') + (font || 'Noto mono');
-//      var fontStrA = '' + ((cellSize - 14) + 'px ') + (font || 'Symbola');
-//      var fontStrB = '' + ((cellSize - 14) + 'px ') + (font || 'Symbola');
+        var fontStrC = '' + ((cellSize - 14) + 'px ') + (font || 'Symbola');
         canvas.width = texSize;
         canvas.height = texSize;
         canvas.style.backgroundColor = 'rgba(100, 40, 60, 1.0)';
-        // ctx.fillRect(0, 0, texSize, texSize);
+        ctx.fillRect(0, 0, texSize, texSize);
         for (var y = 0; y < tileCount; y++) {
           for (var x = 0; x < tileCount; x++) {
             ctx.fillRect((x+1)*cellSize-1,0,1,canvas.width);
@@ -46,11 +55,21 @@
             if ((y==8) || (y==9)) text = symbols[y-6][x];
             var xoff = cellSize * 0.2656 //17;
             var posx = xoff + x * cellSize;
-            var posy = y * cellSize + cellSize / 2 + cellSize / 3.5;
+            var posy = y * cellSize + cellSize / 2 + cellSize / 3.75;
             if ((y==1) && (x<10)) {
               ctx.font = fontStrA;
-              posy += 4;
-              if (x == 4) posy -= 6;
+              posy += cellSize * 0.0625;
+              if (x == 4) posy -= cellSize * 0.09375;
+            }
+            if ((y==0) && (x<9)) {
+              ctx.font = fontStrC;
+              posy -= cellSize * 0.046875;
+              // if (x == 4) posy -= 6;
+            }
+            if ((y==9) && (x >= 14)) {
+              ctx.font = fontStrA;
+              posx -= cellSize * 0.25;
+              posy += cellSize * 0.0625;
             }
             mw = ctx.measureText(text).width;
 //            if (mw + xoff >= cellSize) posx -= (mw + xoff) - cellSize + 3;
@@ -63,43 +82,131 @@
           }
         }
 
-        var myImageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+        myImageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
         //blueComponent = myImageData.data[((50*(myImageData.width*4)) + (200*4)) + 2];
         //myImageData.data[((2*(myImageData.width*4)) + (2*4)) + 2] = 255;
-        for (var y = 0; y < 1; y++) {
+        for (var y = 0; y < tileCount; y++) {
           console.log("Row " + y);
-          for (var x = 0; x < 1; x++) {
+          for (var x = 0; x < tileCount; x++) {
             console.log("Col " + x);
             for (var dy = 0; dy < cellSize; dy++) {
               for (var dx = 0; dx < cellSize; dx++) {
                 var distAndGrad = NearestPixelDistance(myImageData, x * cellSize + dx, y * cellSize + dy);
-                var dist = distAndGrad.dist
+                var dist = distAndGrad[0]
                 if (texSize == 2048) dist *= 0.5;
                 if (texSize == 4096) dist *= 0.25;
-                dist *= 4.0;  // Scale for more precision in 8 bit range.
-                dist = (dist) | 0;
-                dist += 128;
-                dist = Math.min(255, Math.max(0, dist));
-                SetPixelA(myImageData, x * cellSize + dx, y * cellSize + dy, dist);
-                var gradX = distAndGrad.gradX | 0;
-                var gradY = distAndGrad.gradY | 0;
-                gradX /= 2;
-                gradY /= 2;
-                gradX += 128;
-                gradY += 128;
-                gradX = Math.min(255, Math.max(0, gradX));
-                gradY = Math.min(255, Math.max(0, gradY));
-                SetPixelG(myImageData, x * cellSize + dx, y * cellSize + dy, gradX);
-                SetPixelB(myImageData, x * cellSize + dx, y * cellSize + dy, gradY);
+                SetPixelF(x * cellSize + dx, y * cellSize + dy, dist);
+                // dist *= 4.0;  // Scale for more precision in 8 bit range.
+                // dist = (dist) | 0;
+                // dist += 128;
+                // dist = Math.min(255, Math.max(0, dist));
+                // SetPixelA(myImageData, x * cellSize + dx, y * cellSize + dy, dist);
+                // var gradX = distAndGrad[1] | 0;
+                // var gradY = distAndGrad[2] | 0;
+                // gradX /= 2;
+                // gradY /= 2;
+                // gradX += 128;
+                // gradY += 128;
+                // gradX = Math.min(255, Math.max(0, gradX));
+                // gradY = Math.min(255, Math.max(0, gradY));
+                // SetPixelG(myImageData, x * cellSize + dx, y * cellSize + dy, gradX);
+                // SetPixelB(myImageData, x * cellSize + dx, y * cellSize + dy, gradY);
               }
             }
           }
         }
+
+        canvas.width = texSize >> downCount;
+        canvas.height = texSize >> downCount;
+        DownSampleF();
+        newImg = DownSampleR(myImageData, ctx);
+        //myImageData.data.set(newImg);
+        CopyInToA(newImg);
+        for (var y = 0; y < newImg.height; y++) {
+          for (var x = 0; x < newImg.width; x++) {
+            var grad = CalcGradF(x, y);
+            var gradScale = 64.0;
+            var gradX = (grad[0] * gradScale) | 0;
+            var gradY = (grad[1] * gradScale) | 0;
+            // gradX /= 2;
+            // gradY /= 2;
+            gradX += 128;
+            gradY += 128;
+            gradX = Math.min(255, Math.max(0, gradX));
+            gradY = Math.min(255, Math.max(0, gradY));
+            SetPixelG(newImg, x, y, gradX);
+            SetPixelB(newImg, x, y, gradY);
+          }
+        }
+
         ctx.putImageData(myImageData, 0, 0);
+        ctx.putImageData(newImg, 0, 0);
         
         return canvas;
       }
 
+      function DownSampleR(imageData, ctx) {
+        var w2 = (imageData.width / 2) | 0;
+        var h2 = (imageData.height / 2) | 0;
+        // var buf2 = new Uint8ClampedArray(w2 * h2);
+        var buf2 = ctx.createImageData(w2, h2);
+        for (var y = 0; y < h2; y++) {
+          for (var x = 0; x < w2; x++) {
+            var f0 = GetPixelR(imageData, x * 2, y * 2);
+            f0 += GetPixelR(imageData, x * 2 + 1, y * 2);
+            f0 += GetPixelR(imageData, x * 2, y * 2 + 1);
+            f0 += GetPixelR(imageData, x * 2 + 1, y * 2 + 1);
+            f0 *= 0.25;
+            // buf2[y*w2 + x] = f0 | 0;
+            SetPixelR(buf2, x, y, f0 | 0);
+            SetPixelA(buf2,x,y,255);
+          }
+        }
+        return buf2;
+      }
+      function DownSampleF() {
+        var w2 = (widthF / 2) | 0;
+        var h2 = (heightF / 2) | 0;
+        var buf2 = new Float32Array(w2 * h2);
+        for (var y = 0; y < h2; y++) {
+          for (var x = 0; x < w2; x++) {
+            var f0 = GetPixelF(x * 2, y * 2);
+            f0 += GetPixelF(x * 2 + 1, y * 2);
+            f0 += GetPixelF(x * 2, y * 2 + 1);
+            f0 += GetPixelF(x * 2 + 1, y * 2 + 1);
+            f0 *= 0.25;
+            buf2[y*w2 + x] = f0;
+          }
+        }
+        bufferF = buf2;
+        widthF = w2;
+        heightF = h2;
+      }
+      function CopyInToA(imageData) {
+        for (var y = 0; y < heightF; y++) {
+          for (var x = 0; x < widthF; x++) {
+            var pix = GetPixelF(x, y);
+            pix *= 4.0;
+            pix = pix | 0;
+            pix += 128;
+            pix = Math.min(255, Math.max(0, pix));
+            SetPixelA(imageData, x, y, pix);
+          }
+        }
+      }
+
+      function CalcGradF(x, y) {
+        var pix00 = GetPixelFTile(x, y, x, y)
+        var pixP0 = GetPixelFTile(x, y, x + 1, y)
+        var pixN0 = GetPixelFTile(x, y, x - 1, y)
+        var pix0P = GetPixelFTile(x, y, x, y + 1)
+        var pix0N = GetPixelFTile(x, y, x, y - 1)
+        var gradX = 0;
+        var gradY = 0;
+        gradX = pixN0 - pixP0;
+        gradY = pix0N - pix0P;
+        return [-gradX, -gradY];
+      }
       function CalcGrad(imageData, x, y) {
         var pix00 = GetPixelR(imageData, x, y)
         var pixP0 = GetPixelR(imageData, x + 1, y)
@@ -125,7 +232,13 @@
         var gradY = 0;
         gradX = pixN0 - pixP0;
         gradY = pix0N - pix0P;
-        return {x: gradX, y: gradY};
+        // gradX = pixN0 - pix00;
+        // gradX += pix00 - pixP0;
+        // gradX *= 0.5;
+        // gradY = pix0N - pix00;
+        // gradY += pix00 - pix0P;
+        // gradY *= 0.5;
+        return [gradX, gradY];
       }
 
       function NearestPixelDistance(imageData, x, y) {
@@ -134,7 +247,8 @@
         var sign = 1;
         if (GetPixelR(imageData, x, y) >= 128) sign = -sign;
 
-        var minDist = cellSize * 1.414;
+        var bestDist = cellSize * 1.414;
+        var minDistSquaredPos = bestDist * bestDist;
         var nearestGradX = 0;
         var nearestGradY = 0;
         var grad = {x:0, y:0};
@@ -144,26 +258,28 @@
             // if (posx < Math.floor(x / cellSize) * cellSize) continue;
             // if (posx > Math.floor(x / cellSize) * cellSize + cellSize) continue;
             var posy = (y - rad);
-            if ((Math.floor(posx / cellSize) == Math.floor(x / cellSize)) && (Math.floor(posy / cellSize) == Math.floor(y / cellSize))) {
+            if ((((posx / cellSize) | 0) == ((x / cellSize) | 0)) && (((posy / cellSize) | 0) == ((y / cellSize) | 0))) {
               if (GetPixelR(imageData, posx, posy)*sign >= 128*sign) {
-                dist = Math.sqrt((posx - x) * (posx - x) + (posy - y) * (posy - y));
-                dist += sign * 0.5 - 0.5;
-                dist *= sign;
-                if (dist < minDist) {
-                  minDist = dist;
-                  grad = CalcGrad(imageData, posx, posy);
+                var distSquared = (posx - x) * (posx - x) + (posy - y) * (posy - y);
+                if (distSquared < minDistSquaredPos) {
+                  minDistSquaredPos = distSquared;
+                  var dist = Math.sqrt(distSquared);
+                  dist += sign * 0.5 - 0.5;
+                  dist *= sign;
+                  bestDist = dist;
                 }
               }
             }
             posy = y + rad;
-            if ((Math.floor(posx / cellSize) == Math.floor(x / cellSize)) && (Math.floor(posy / cellSize) == Math.floor(y / cellSize))) {
+            if ((((posx / cellSize) | 0) == ((x / cellSize) | 0)) && (((posy / cellSize) | 0) == ((y / cellSize) | 0))) {
               if (GetPixelR(imageData, posx, posy)*sign >= 128*sign) {
-                dist = Math.sqrt((posx - x) * (posx - x) + (posy - y) * (posy - y));
-                dist += sign * 0.5 - 0.5;
-                dist *= sign;
-                if (dist < minDist) {
-                  minDist = dist;
-                  grad = CalcGrad(imageData, posx, posy);
+                var distSquared = (posx - x) * (posx - x) + (posy - y) * (posy - y);
+                if (distSquared < minDistSquaredPos) {
+                  minDistSquaredPos = distSquared;
+                  var dist = Math.sqrt(distSquared);
+                  dist += sign * 0.5 - 0.5;
+                  dist *= sign;
+                  bestDist = dist;
                 }
               }
             }
@@ -173,43 +289,57 @@
             var posy = y + dy;
             // if (posy < Math.floor(y / cellSize) * cellSize) continue;
             // if (posy > Math.floor(y / cellSize) * cellSize + cellSize) continue;
-            if ((Math.floor(posx / cellSize) == Math.floor(x / cellSize)) && (Math.floor(posy / cellSize) == Math.floor(y / cellSize))) {
+            if ((((posx / cellSize) | 0) == ((x / cellSize) | 0)) && (((posy / cellSize) | 0) == ((y / cellSize) | 0))) {
               if (GetPixelR(imageData, posx, posy)*sign >= 128*sign) {
-                dist = Math.sqrt((posx - x) * (posx - x) + (posy - y) * (posy - y));
-                dist += sign * 0.5 - 0.5;
-                dist *= sign;
-                if (dist < minDist) {
-                  minDist = dist;
-                  grad = CalcGrad(imageData, posx, posy);
+                var distSquared = (posx - x) * (posx - x) + (posy - y) * (posy - y);
+                if (distSquared < minDistSquaredPos) {
+                  minDistSquaredPos = distSquared;
+                  var dist = Math.sqrt(distSquared);
+                  dist += sign * 0.5 - 0.5;
+                  dist *= sign;
+                  bestDist = dist;
                 }
               }
             }
             posx = x + rad;
-            if ((Math.floor(posx / cellSize) == Math.floor(x / cellSize)) && (Math.floor(posy / cellSize) == Math.floor(y / cellSize))) {
+            if ((((posx / cellSize) | 0) == ((x / cellSize) | 0)) && (((posy / cellSize) | 0) == ((y / cellSize) | 0))) {
               if (GetPixelR(imageData, posx, posy)*sign >= 128*sign) {
-                dist = Math.sqrt((posx - x) * (posx - x) + (posy - y) * (posy - y));
-                dist += sign * 0.5 - 0.5;
-                dist *= sign;
-                if (dist < minDist) {
-                  minDist = dist;
-                  grad = CalcGrad(imageData, posx, posy);
+                var distSquared = (posx - x) * (posx - x) + (posy - y) * (posy - y);
+                if (distSquared < minDistSquaredPos) {
+                  minDistSquaredPos = distSquared;
+                  var dist = Math.sqrt(distSquared);
+                  dist += sign * 0.5 - 0.5;
+                  dist *= sign;
+                  bestDist = dist;
                 }
               }
             }
           }
           // Quit if rad > sqrt(2) rounded up times minDist
-          if (rad > minDist * 1.5) break;
+          if (rad > Math.sqrt(minDistSquaredPos) * 1.5) break;
         }
         // make the border exactly at the zero crossing.
-        dist -= 0.5;
-        return {dist: minDist, gradX : grad.x, gradY : grad.y};
+        bestDist -= 0.5;
+        return [bestDist, grad[0], grad[1]];
+      }
+      function InRange(imageData, x, y) {
+        if (x < 0) return false;
+        if (y < 0) return false;
+        if (x >= imageData.width) return false;
+        if (y >= imageData.height) return false;
+        return true;
       }
       function GetPixelR(imageData, x, y) {
-        if (x < 0) return 0;
-        if (y < 0) return 0;
-        if (x >= imageData.width) return 0;
-        if (y >= imageData.height) return 0;
+        if (!InRange(imageData, x, y)) return 0;
         return imageData.data[((y*(imageData.width*4)) + (x*4)) + 0];
+      }
+      function GetPixelG(imageData, x, y) {
+        if (!InRange(imageData, x, y)) return 0;
+        return imageData.data[((y*(imageData.width*4)) + (x*4)) + 1];
+      }
+      function GetPixelB(imageData, x, y) {
+        if (!InRange(imageData, x, y)) return 0;
+        return imageData.data[((y*(imageData.width*4)) + (x*4)) + 2];
       }
       function SetPixelR(imageData, x, y, pix) {
         imageData.data[((y*(imageData.width*4)) + (x*4)) + 0] = pix;
@@ -223,10 +353,41 @@
       function SetPixelA(imageData, x, y, pix) {
         imageData.data[((y*(imageData.width*4)) + (x*4)) + 3] = pix;
       }
+      function SetPixelF(x, y, pix) {
+        bufferF[y*widthF + x] = pix;
+      }
+      function GetPixelF(x, y) {
+        if (x < 0) return 0.0;
+        if (y < 0) return 0.0;
+        if (x >= widthF) return 0.0;
+        if (y >= heightF) return 0.0;
+        return bufferF[y*widthF + x];
+      }
+      function GetPixelFTile(tx, ty, x, y) {
+        var left = ((tx / cellSize) | 0) * cellSize;
+        var top = ((ty / cellSize) | 0) * cellSize;
+        var right = ((tx / cellSize) | 0) * cellSize + cellSize - 1;
+        var bottom = ((ty / cellSize) | 0) * cellSize + cellSize - 1;
+        if (x < left) x = left;
+        if (y < top) y = top;
+        if (x > right) x = right;
+        if (y > bottom) y = bottom;
+        return bufferF[y*widthF + x];
+      }
 
       function GenChar() {
         canvas = createTextCanvas('white', undefined);
         document.body.appendChild(canvas);
+
+        canvas.onclick = function(e) {
+          e = e || window.event
+          var rect = canvas.getBoundingClientRect();
+          var mousex = e.clientX - rect.left;
+          var mousey = e.clientY - rect.top;
+          var pixG = GetPixelG(newImg, mousex, mousey);
+          var pixB = GetPixelB(newImg, mousex, mousey);
+          console.log('Green: ' + pixG + "   Blue: " + pixB);
+        }
       }
 
       function autorun()
