--- a/codepage_gen.html
+++ b/codepage_gen.html
@@ -7,7 +7,7 @@
   <body>
 
     <script type="text/javascript">
-      symbols = ["⏮⏪⏴⏺⏹⏸⏵⏩⏭♩♪♫♬♭♮♯",
+      symbols = ["⏮⏪⏴⏺⏹⏵⏸⏩⏭♩♪♫♬♭♮♯",
         "←↑→↓↔↕↖↗↘↙↺↻★☆☺☻",
         "αβγδεθλμξπρστφψω",
         "ΓΔΘΛΠΣΦΨΩ∇√∞∘∫♡♥ "];
@@ -19,9 +19,10 @@
         // "☀☁☂☃⇦⇧⇨⇩"
 
 
-      downCount = 1;
-      cellSize = 128 | 0;
-      texSize = 2048 | 0;
+      downCount = 2;
+      cellSize = 256 | 0;
+      texSize = 4096 | 0;
+
       tileCount = (texSize / cellSize) | 0;
       bufferF = new Float32Array(texSize * texSize);
       widthF = texSize;
@@ -118,8 +119,11 @@
 
         canvas.width = texSize >> downCount;
         canvas.height = texSize >> downCount;
-        DownSampleF();
-        newImg = DownSampleR(myImageData, ctx);
+        newImg = myImageData;
+        for (var i = 0; i < downCount; i++) {
+          DownSampleF();
+          newImg = DownSampleR(newImg, ctx);
+        }
         //myImageData.data.set(newImg);
         CopyInToA(newImg);
         for (var y = 0; y < newImg.height; y++) {
