--- a/codepage_gen.html
+++ b/codepage_gen.html
@@ -8,15 +8,16 @@
 
     <script type="text/javascript">
       symbols = ["⏮⏪⏴⏺⏹⏵⏸⏩⏭♩♪♫♬♭♮♯",
-        "←↑→↓↔↕↖↗↘↙↺↻★☆☺☻",
+        "←↑→↓↔↕↖↗↘↙↺↻★☻  ",
         "αβγδεθλμξπρστφψω",
-        "ΓΔΘΛΠΣΦΨΩ∇√∞∘∫♡♥ "];
+        "ΓΔΘΛΠΣΦΨΩ∞ƒ∘∫∂∇√"];
         // "αβγδεθλμξπρστφψω"
         // "ΓΔΘΛΠΣΦΨΩ"
         // "∇√∞∘∫"
         // "⏮⏪⏴⏺⏹⏸⏵⏩⏭"
         // "📷📹📽🕨🕪🖮"
         // "☀☁☂☃⇦⇧⇨⇩"
+        // "♡♥"
 
 
       downCount = 2;
@@ -37,6 +38,7 @@
         var fontStrA = 'bold ' + ((cellSize * 0.9218) + 'px ') + (font || 'Helvetica');
         var fontStrB = 'bold ' + ((cellSize * 0.78125) + 'px ') + (font || 'Noto mono');
         var fontStrC = '' + ((cellSize - 14) + 'px ') + (font || 'Symbola');
+        var fontStrD = '' + ((cellSize - 14) + 'px ') + (font || 'Apple Symbols');
         canvas.width = texSize;
         canvas.height = texSize;
         canvas.style.backgroundColor = 'rgba(100, 40, 60, 1.0)';
@@ -54,6 +56,9 @@
             var text = String.fromCharCode(x + y * tileCount)
             if (y <= 1) text = symbols[y][x];
             if ((y==8) || (y==9)) text = symbols[y-6][x];
+            if ((y==1) && (x==13)) ctx.font = fontStrD;
+            if ((y==1) && (x==14)) text = "🕨";
+            if ((y==1) && (x==15)) text = "🕪";
             var xoff = cellSize * 0.2656 //17;
             var posx = xoff + x * cellSize;
             var posy = y * cellSize + cellSize / 2 + cellSize / 3.75;
@@ -67,11 +72,12 @@
               posy -= cellSize * 0.046875;
               // if (x == 4) posy -= 6;
             }
-            if ((y==9) && (x >= 14)) {
-              ctx.font = fontStrA;
-              posx -= cellSize * 0.25;
-              posy += cellSize * 0.0625;
-            }
+            // if ((y==9) && (x >= 14)) {
+            //   // For hearts
+            //   ctx.font = fontStrA;
+            //   posx -= cellSize * 0.25;
+            //   posy += cellSize * 0.0625;
+            // }
             mw = ctx.measureText(text).width;
 //            if (mw + xoff >= cellSize) posx -= (mw + xoff) - cellSize + 3;
             if (y <= 1) posx = (cellSize-mw) / 2 + x * cellSize;  // Center symbols
@@ -90,30 +96,32 @@
           console.log("Row " + y);
           for (var x = 0; x < tileCount; x++) {
             console.log("Col " + x);
-            for (var dy = 0; dy < cellSize; dy++) {
-              for (var dx = 0; dx < cellSize; dx++) {
-                var distAndGrad = NearestPixelDistance(myImageData, x * cellSize + dx, y * cellSize + dy);
-                var dist = distAndGrad[0]
-                if (texSize == 2048) dist *= 0.5;
-                if (texSize == 4096) dist *= 0.25;
-                SetPixelF(x * cellSize + dx, y * cellSize + dy, dist);
-                // dist *= 4.0;  // Scale for more precision in 8 bit range.
-                // dist = (dist) | 0;
-                // dist += 128;
-                // dist = Math.min(255, Math.max(0, dist));
-                // SetPixelA(myImageData, x * cellSize + dx, y * cellSize + dy, dist);
-                // var gradX = distAndGrad[1] | 0;
-                // var gradY = distAndGrad[2] | 0;
-                // gradX /= 2;
-                // gradY /= 2;
-                // gradX += 128;
-                // gradY += 128;
-                // gradX = Math.min(255, Math.max(0, gradX));
-                // gradY = Math.min(255, Math.max(0, gradY));
-                // SetPixelG(myImageData, x * cellSize + dx, y * cellSize + dy, gradX);
-                // SetPixelB(myImageData, x * cellSize + dx, y * cellSize + dy, gradY);
-              }
-            }
+            var borderPixels = FindBorderPixels(myImageData, x, y);
+            FillDistance(myImageData, borderPixels, x, y);
+            // for (var dy = 0; dy < cellSize; dy++) {
+            //   for (var dx = 0; dx < cellSize; dx++) {
+            //     var distAndGrad = NearestPixelDistance(myImageData, x * cellSize + dx, y * cellSize + dy);
+            //     var dist = distAndGrad[0]
+            //     if (texSize == 2048) dist *= 0.5;
+            //     if (texSize == 4096) dist *= 0.25;
+            //     SetPixelF(x * cellSize + dx, y * cellSize + dy, dist);
+            //     // dist *= 4.0;  // Scale for more precision in 8 bit range.
+            //     // dist = (dist) | 0;
+            //     // dist += 128;
+            //     // dist = Math.min(255, Math.max(0, dist));
+            //     // SetPixelA(myImageData, x * cellSize + dx, y * cellSize + dy, dist);
+            //     // var gradX = distAndGrad[1] | 0;
+            //     // var gradY = distAndGrad[2] | 0;
+            //     // gradX /= 2;
+            //     // gradY /= 2;
+            //     // gradX += 128;
+            //     // gradY += 128;
+            //     // gradX = Math.min(255, Math.max(0, gradX));
+            //     // gradY = Math.min(255, Math.max(0, gradY));
+            //     // SetPixelG(myImageData, x * cellSize + dx, y * cellSize + dy, gradX);
+            //     // SetPixelB(myImageData, x * cellSize + dx, y * cellSize + dy, gradY);
+            //   }
+            // }
           }
         }
 
@@ -147,6 +155,101 @@
         ctx.putImageData(newImg, 0, 0);
         
         return canvas;
+      }
+
+      function IsBorderPixel(imageData, x, y) {
+        var pix00 = GetPixelRTile(imageData, x, y, x, y)
+        var pixP0 = GetPixelRTile(imageData, x, y, x + 1, y)
+        var pixN0 = GetPixelRTile(imageData, x, y, x - 1, y)
+        var pix0P = GetPixelRTile(imageData, x, y, x, y + 1)
+        var pix0N = GetPixelRTile(imageData, x, y, x, y - 1)
+        var on = pix00 >= 128;
+        if ((pixP0 >= 128) != on) return true;
+        if ((pixN0 >= 128) != on) return true;
+        if ((pix0P >= 128) != on) return true;
+        if ((pix0N >= 128) != on) return true;
+        return false;
+      }
+      function FindBorderPixels(imageData, tx, ty) {
+        var borderPixels = new Set();
+        for (var dy = 0; dy < cellSize; dy++) {
+          for (var dx = 0; dx < cellSize; dx++) {
+            var posx = tx * cellSize + dx;
+            var posy = ty * cellSize + dy;
+            var border = IsBorderPixel(imageData, posx, posy);
+            if (border) borderPixels.add((posx + posy * imageData.width) | 0)
+          }
+        }
+        return borderPixels;
+      }
+      function FillDistance(imageData, borderPixels, tx, ty) {
+        // Clear cell to max value.
+        for (var dy = 0; dy < cellSize; dy++) {
+          for (var dx = 0; dx < cellSize; dx++) {
+            var pixx = tx * cellSize + dx;
+            var pixy = ty * cellSize + dy;
+            SetPixelF(pixx, pixy, cellSize);
+          }
+        }
+        // For every border pixel, draw a cone of distance from it. Only draw if smaller than existing
+        // pixels so we get minimum distance everywhere.
+        for (let pixel of borderPixels) {
+          var posx = (pixel % imageData.width) | 0;
+          var posy = (pixel / imageData.width) | 0;
+          //SetPixelB(imageData, posx, posy, 255);
+          var sign = 1;
+          if (GetPixelR(imageData, posx, posy) >= 128) sign = -sign;
+          if (sign < 0) {
+            for (var dy = 0; dy < cellSize; dy++) {
+              for (var dx = 0; dx < cellSize; dx++) {
+                var pixx = tx * cellSize + dx;
+                var pixy = ty * cellSize + dy;
+                var currentSign = GetPixelR(imageData, pixx, pixy) >= 128 ? -1 : 1;
+                if (currentSign != sign) {
+                  var distSquared = Math.sqrt((posx-pixx) * (posx-pixx) + (posy-pixy)*(posy-pixy));
+                  distSquared -= 0.5;  // Make edge of bitmap the zero crossing.
+                  var current = GetPixelF(pixx, pixy);
+                  if (distSquared < current) {
+                    SetPixelF(pixx, pixy, distSquared);
+                  }
+                }
+              }
+            }
+          }
+          if (sign > 0) {
+            for (var dy = 0; dy < cellSize; dy++) {
+              for (var dx = 0; dx < cellSize; dx++) {
+                var pixx = tx * cellSize + dx;
+                var pixy = ty * cellSize + dy;
+                var currentSign = GetPixelR(imageData, pixx, pixy) >= 128 ? -1 : 1;
+                if (currentSign != sign) {
+                  var distSquared = Math.sqrt((posx-pixx) * (posx-pixx) + (posy-pixy)*(posy-pixy));
+                  distSquared -= 0.5;  // Make edge of bitmap the zero crossing.
+                  var current = GetPixelF(pixx, pixy);
+                  if (distSquared < current) {
+                    SetPixelF(pixx, pixy, distSquared);
+                  }
+                }
+              }
+            }
+          }
+        }
+        var scaler = 1.0 / (Math.pow(2, downCount))
+        // Negate inside of letter for signed distance function.
+        for (var dy = 0; dy < cellSize; dy++) {
+          for (var dx = 0; dx < cellSize; dx++) {
+            var pixx = tx * cellSize + dx;
+            var pixy = ty * cellSize + dy;
+            var currentSign = GetPixelR(imageData, pixx, pixy) >= 128 ? -1 : 1;
+            var current = GetPixelF(pixx , pixy);
+            current *= scaler;
+            if (currentSign == -1) {
+              SetPixelF(pixx, pixy, -current);
+            } else {
+              SetPixelF(pixx, pixy, current);
+            }
+          }
+        }
       }
 
       function DownSampleR(imageData, ctx) {
@@ -377,6 +480,17 @@
         if (x > right) x = right;
         if (y > bottom) y = bottom;
         return bufferF[y*widthF + x];
+      }
+      function GetPixelRTile(imageData, tx, ty, x, y) {
+        var left = ((tx / cellSize) | 0) * cellSize;
+        var top = ((ty / cellSize) | 0) * cellSize;
+        var right = ((tx / cellSize) | 0) * cellSize + cellSize - 1;
+        var bottom = ((ty / cellSize) | 0) * cellSize + cellSize - 1;
+        if (x < left) x = left;
+        if (y < top) y = top;
+        if (x > right) x = right;
+        if (y > bottom) y = bottom;
+        return imageData.data[((y*(imageData.width*4)) + (x*4)) + 0];
       }
 
       function GenChar() {
