--- a/codepage_gen.html
+++ b/codepage_gen.html
@@ -1,3 +1,10 @@
+<!--
+License CC0 - http://creativecommons.org/publicdomain/zero/1.0/
+To the extent possible under law, the author(s) have dedicated all copyright and related and neighboring rights to this software to the public domain worldwide. This software is distributed without any warranty.
+
+^ This means do ANYTHING YOU WANT with this code. Because we are programmers, not lawyers.
+-Otavio Good
+-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -33,9 +40,7 @@
       var newImg;
       function createTextCanvas(color, font) {
         var canvas = document.createElement('canvas');
-        // var canvasSmall = document.createElement('canvasSmall');
         var ctx = canvas.getContext('2d');
-        // var ctxSmall = canvasSmall.getContext('2d');
         var fontStrA = 'bold ' + ((cellSize * 0.9218) + 'px ') + (font || 'Helvetica');
         var fontStrB = 'bold ' + ((cellSize * 0.78125) + 'px ') + (font || 'Noto mono');
         var fontStrC = '' + ((cellSize - 14) + 'px ') + (font || 'Symbola');
@@ -71,58 +76,20 @@
             if ((y==0) && (x<9)) {
               ctx.font = fontStrC;
               posy -= cellSize * 0.046875;
-              // if (x == 4) posy -= 6;
             }
-            // if ((y==9) && (x >= 14)) {
-            //   // For hearts
-            //   ctx.font = fontStrA;
-            //   posx -= cellSize * 0.25;
-            //   posy += cellSize * 0.0625;
-            // }
             mw = ctx.measureText(text).width;
-//            if (mw + xoff >= cellSize) posx -= (mw + xoff) - cellSize + 3;
             if (y <= 1) posx = (cellSize-mw) / 2 + x * cellSize;  // Center symbols
-//            if ((x == 15) && (y == 5)) posy -= 6;     // HACK FOR UNDERSCORE!!!!
-//            if ((x == 0) && (y == 9)) posy -= 2;     // HACK FOR symbol
-//            if ((x == 10) && (y == 9)) posy += 6;     // HACK FOR symbol
-//            if (y == 0) posy += 4;
             ctx.fillText(text, posx, posy);
           }
         }
 
         myImageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-        //blueComponent = myImageData.data[((50*(myImageData.width*4)) + (200*4)) + 2];
-        //myImageData.data[((2*(myImageData.width*4)) + (2*4)) + 2] = 255;
         for (var y = 0; y < tileCount; y++) {
           console.log("Row " + y);
           for (var x = 0; x < tileCount; x++) {
             console.log("Col " + x);
             var borderPixels = FindBorderPixels(myImageData, x, y);
             FillDistance(myImageData, borderPixels, x, y);
-            // for (var dy = 0; dy < cellSize; dy++) {
-            //   for (var dx = 0; dx < cellSize; dx++) {
-            //     var distAndGrad = NearestPixelDistance(myImageData, x * cellSize + dx, y * cellSize + dy);
-            //     var dist = distAndGrad[0]
-            //     if (texSize == 2048) dist *= 0.5;
-            //     if (texSize == 4096) dist *= 0.25;
-            //     SetPixelF(x * cellSize + dx, y * cellSize + dy, dist);
-            //     // dist *= 4.0;  // Scale for more precision in 8 bit range.
-            //     // dist = (dist) | 0;
-            //     // dist += 128;
-            //     // dist = Math.min(255, Math.max(0, dist));
-            //     // SetPixelA(myImageData, x * cellSize + dx, y * cellSize + dy, dist);
-            //     // var gradX = distAndGrad[1] | 0;
-            //     // var gradY = distAndGrad[2] | 0;
-            //     // gradX /= 2;
-            //     // gradY /= 2;
-            //     // gradX += 128;
-            //     // gradY += 128;
-            //     // gradX = Math.min(255, Math.max(0, gradX));
-            //     // gradY = Math.min(255, Math.max(0, gradY));
-            //     // SetPixelG(myImageData, x * cellSize + dx, y * cellSize + dy, gradX);
-            //     // SetPixelB(myImageData, x * cellSize + dx, y * cellSize + dy, gradY);
-            //   }
-            // }
           }
         }
 
@@ -150,7 +117,6 @@
           DownSampleF();
           newImg = DownSample(newImg, ctx);
         }
-        //myImageData.data.set(newImg);
         CopyInToA(newImg);
 
         ctx.putImageData(myImageData, 0, 0);
@@ -344,121 +310,6 @@
         gradX = pixN0 - pixP0;
         gradY = pix0N - pix0P;
         return [-gradX, -gradY];
-      }
-      function CalcGrad(imageData, x, y) {
-        var pix00 = GetPixelR(imageData, x, y)
-        var pixP0 = GetPixelR(imageData, x + 1, y)
-        var pixN0 = GetPixelR(imageData, x - 1, y)
-        var pix0P = GetPixelR(imageData, x, y + 1)
-        var pix0N = GetPixelR(imageData, x, y - 1)
-        /*var pixPP = GetPixelR(imageData, x + 1, y + 1)
-        var pixPN = GetPixelR(imageData, x + 1, y - 1)
-        var pixNN = GetPixelR(imageData, x - 1, y - 1)
-        var pixNP = GetPixelR(imageData, x - 1, y + 1)
-        var mask = 0;
-        if (pix00 >= 128) mask |= 1 << 8;
-        if (pixP0 >= 128) mask |= 1 << 7;
-        if (pixN0 >= 128) mask |= 1 << 6;
-        if (pix0P >= 128) mask |= 1 << 5;
-        if (pix0N >= 128) mask |= 1 << 4;
-        if (pixPP >= 128) mask |= 1 << 3;
-        if (pixPN >= 128) mask |= 1 << 2;
-        if (pixNN >= 128) mask |= 1 << 1;
-        if (pixNP >= 128) mask |= 1;
-        var pixUL = (pix00 + pixN0 + pixNN + pix0N) * 0.25*/
-        var gradX = 0;
-        var gradY = 0;
-        gradX = pixN0 - pixP0;
-        gradY = pix0N - pix0P;
-        // gradX = pixN0 - pix00;
-        // gradX += pix00 - pixP0;
-        // gradX *= 0.5;
-        // gradY = pix0N - pix00;
-        // gradY += pix00 - pix0P;
-        // gradY *= 0.5;
-        return [gradX, gradY];
-      }
-
-      function NearestPixelDistance(imageData, x, y) {
-        x = x | 0;
-        y = y | 0;
-        var sign = 1;
-        if (GetPixelR(imageData, x, y) >= 128) sign = -sign;
-
-        var bestDist = cellSize * 1.414;
-        var minDistSquaredPos = bestDist * bestDist;
-        var nearestGradX = 0;
-        var nearestGradY = 0;
-        var grad = {x:0, y:0};
-        for (var rad = 0; rad < cellSize; rad++) {
-          for (var dx = -rad; dx <= rad; dx++) {
-            var posx = (x + dx);
-            // if (posx < Math.floor(x / cellSize) * cellSize) continue;
-            // if (posx > Math.floor(x / cellSize) * cellSize + cellSize) continue;
-            var posy = (y - rad);
-            if ((((posx / cellSize) | 0) == ((x / cellSize) | 0)) && (((posy / cellSize) | 0) == ((y / cellSize) | 0))) {
-              if (GetPixelR(imageData, posx, posy)*sign >= 128*sign) {
-                var distSquared = (posx - x) * (posx - x) + (posy - y) * (posy - y);
-                if (distSquared < minDistSquaredPos) {
-                  minDistSquaredPos = distSquared;
-                  var dist = Math.sqrt(distSquared);
-                  dist += sign * 0.5 - 0.5;
-                  dist *= sign;
-                  bestDist = dist;
-                }
-              }
-            }
-            posy = y + rad;
-            if ((((posx / cellSize) | 0) == ((x / cellSize) | 0)) && (((posy / cellSize) | 0) == ((y / cellSize) | 0))) {
-              if (GetPixelR(imageData, posx, posy)*sign >= 128*sign) {
-                var distSquared = (posx - x) * (posx - x) + (posy - y) * (posy - y);
-                if (distSquared < minDistSquaredPos) {
-                  minDistSquaredPos = distSquared;
-                  var dist = Math.sqrt(distSquared);
-                  dist += sign * 0.5 - 0.5;
-                  dist *= sign;
-                  bestDist = dist;
-                }
-              }
-            }
-          }
-          for (var dy = -rad; dy <= rad; dy++) {
-            var posx = x - rad;
-            var posy = y + dy;
-            // if (posy < Math.floor(y / cellSize) * cellSize) continue;
-            // if (posy > Math.floor(y / cellSize) * cellSize + cellSize) continue;
-            if ((((posx / cellSize) | 0) == ((x / cellSize) | 0)) && (((posy / cellSize) | 0) == ((y / cellSize) | 0))) {
-              if (GetPixelR(imageData, posx, posy)*sign >= 128*sign) {
-                var distSquared = (posx - x) * (posx - x) + (posy - y) * (posy - y);
-                if (distSquared < minDistSquaredPos) {
-                  minDistSquaredPos = distSquared;
-                  var dist = Math.sqrt(distSquared);
-                  dist += sign * 0.5 - 0.5;
-                  dist *= sign;
-                  bestDist = dist;
-                }
-              }
-            }
-            posx = x + rad;
-            if ((((posx / cellSize) | 0) == ((x / cellSize) | 0)) && (((posy / cellSize) | 0) == ((y / cellSize) | 0))) {
-              if (GetPixelR(imageData, posx, posy)*sign >= 128*sign) {
-                var distSquared = (posx - x) * (posx - x) + (posy - y) * (posy - y);
-                if (distSquared < minDistSquaredPos) {
-                  minDistSquaredPos = distSquared;
-                  var dist = Math.sqrt(distSquared);
-                  dist += sign * 0.5 - 0.5;
-                  dist *= sign;
-                  bestDist = dist;
-                }
-              }
-            }
-          }
-          // Quit if rad > sqrt(2) rounded up times minDist
-          if (rad > Math.sqrt(minDistSquaredPos) * 1.5) break;
-        }
-        // make the border exactly at the zero crossing.
-        bestDist -= 0.5;
-        return [bestDist, grad[0], grad[1]];
       }
       function InRange(imageData, x, y) {
         if (x < 0) return false;
